# particler

./: .gitignore  CMakeLists.txt  Readme.md  cmds.txt  mingw-toolchain.cmake
engine/: CMakeLists.txt
engine/include/: engine.h  settings.h
engine/int/: graphics.h  handler.h  particles.h  queue.h  worker.h
engine/src/: engine.cpp  graphics.cpp  handler.cpp  worker.cpp
gl/: CMakeLists.txt
gl/int/: test.h
gl/src/: main.cpp  test.cpp
